--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>This is a title</title>
 </head>
 <body>
 	<p>this is a paragraph tag</p>
